<?xml version="1.0"?>
<package format="3">
  <name>dlio-to-hdmapping</name>
  <version>0.0.1</version>
  <description>Convert recorded D-LIO odometry bag to HDMapping session format</description>
  <maintainer email="januszbedkowski@gmail.com">Janusz Bedkowski</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rosbag2_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
